--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -34,3 +34,56 @@ pre {
         font-size: 1.4em;
     }
 }
+
+
+
+.container {
+  background-size:cover;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.brightness-box {
+  width:400px;
+  height:60px;
+  
+  background:#f8f8f8;
+  
+  border-radius:8px;
+  
+  padding:0 20px;
+
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+}
+
+.brightness-box i {
+  margin:0 10px;
+}
+
+#range {
+  width:100%;
+  height:3px;
+  
+  /*tira a barra do input range*/
+  -webkit-appearance:none;
+  
+  background:rgb(255, 213, 0);
+  outline:none;
+}
+
+#range::-webkit-slider-thumb {
+  -webkit-appearance:none;
+  
+  background:rgb(255, 213, 0);
+  
+  width:22px;
+  height:22px;
+  
+  border-radius:50%;
+  
+  cursor:pointer;
+}
